--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         }
         img {
             width: 25%; /* Image width */
+            height: 100%;
             border: 0; /* For IE */
             /* Aspect ratio of image, gives initial dimension to prevent text moving down once image is loaded */
             /* When changing logo, change this also */
