--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <body>
     <div id="main">
         <img src="nsrptext.png" alt="Logo Image">
-        <h1>Company Name</h1>
+        <h1>Nevada State Roleplay</h1>
         <h2>Our website is currently under construction. </h2>
         <div id="progress"><div id="fill"><div id="barpercent"><h3>65%</h3></div></div></div>
     </div>
