--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         #fill {
             padding: 2px 0;
             background-color: #00b98b; /* Fill colour */
-            width: 92%; /* Bar percentage, change text below also */
+            width: 100%; /* Bar percentage, change text below also */
             border-radius: 25px; /* Roundness */
             animation: proanimate 2s;
         }
@@ -86,7 +86,8 @@
         <img src="nsrptext.png" alt="Logo Image">
         <h1>Nevada State Roleplay</h1>
         <h2>Our website is currently under construction. </h2>
-        <div id="progress"><div id="fill"><div id="barpercent"><h3>92%</h3></div></div></div>
+        <h2><strong>RELEASING 9/14 at 1:00 CST!</strong></h2>
+        <div id="progress"><div id="fill"><div id="barpercent"><h3>100%</h3></div></div></div>
     </div>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 </body>
