--- a/index.html
+++ b/index.html
@@ -87,6 +87,22 @@
         <h1>Nevada State Roleplay</h1>
         <h2>Our website is currently under construction. </h2>
         <h2><strong>RELEASING 9/14 at 1:00 CST!</strong></h2>
+        <div class="container">
+  <h1 id="headline">Countdown to my birthday</h1>
+  <div id="countdown">
+    <ul>
+      <li><span id="days"></span>days</li>
+      <li><span id="hours"></span>Hours</li>
+      <li><span id="minutes"></span>Minutes</li>
+      <li><span id="seconds"></span>Seconds</li>
+    </ul>
+  </div>
+  <div id="content" class="emoji">
+    <span>🥳</span>
+    <span>🎉</span>
+    <span>🎂</span>
+  </div>
+</div>
         <div id="progress"><div id="fill"><div id="barpercent"><h3>100%</h3></div></div></div>
     </div>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
